--- a/briefs/cleaninnos/code/proposal.Rmd
+++ b/briefs/cleaninnos/code/proposal.Rmd
@@ -10,6 +10,12 @@ editor_options:
 ---
 
 
+<style>
+.caption {
+  font-size: .8em;
+}
+</style>
+
 
 
 
@@ -21,19 +27,20 @@ knitr::opts_chunk$set(echo = TRUE)
 Efforts for to transform the global economy from being mainly fossil fuel driven to a state with effectively net zero emissions will have to be mindful of the impact on economic growth. If the transition to clean compromises growth  the political will for pursuing any meaningful climate policy will be in short supply. Worse it could further fuel extremist political movements as we have seen in recent years with repercussions beyond climate impacts.
 This applies in developed economies but even more so in developing economies. It is neither morally fair nor practically feasible to keep these economies at the low levels of per capita income and emissions many of them find themselves in at the moment.
 
-At first glance, the need increase incomes would imply an inexorable trade-off between environmental and economic outcomes. Clearly, one potential strategy for development is to imitate leading economies including their reliance on cheap, tried and tested fossil fuel technologies. However, in ongoing research we have found that innovation spillovers for clean technologies are on the whole considerably larger for clean technologies than for dirty. Indeed, specific, clean technologies are among the most spillover intensive technology types that can be identified. This opens up the possibility that there is not really an inexorable trade-off but rather the space for an environmental and growth win-win with when transitioning to net zero carbon. However, because some of the potential wins arise via spillovers this will not happen via market forces alone. It also is important to note that not all clean technologies have the same external spillover benefit and not all technologies generate the same benefits to all countries.
+At first glance, the need increase incomes would imply an inexorable trade-off between environmental and economic outcomes. Clearly, one potential strategy for development is to imitate leading economies including their reliance on cheap, tried and tested fossil fuel technologies. However, in ongoing research (e.g. [Dechezlepretre et al.](https://cep.lse.ac.uk/_NEW/PUBLICATIONS/abstract.asp?index=4503), [Rydge et al.](https://cep.lse.ac.uk/_NEW/PUBLICATIONS/abstract.asp?index=6073) ) we have found that innovation spillovers for clean technologies are on the whole considerably larger for clean technologies than for dirty. Indeed, specific, clean technologies are among the most spillover intensive technology types that can be identified. This opens up the possibility that there is not really an inexorable trade-off but rather the space for an environmental and growth win-win with when transitioning to net zero carbon. However, because some of the potential wins arise via spillovers this will not happen via market forces alone. It also is important to note that not all clean technologies have the same external spillover benefit and not all technologies generate the same benefits to all countries.
 
-This raises the question if developing countries are particularly well placed to develop an industrial strategy around clean technologies. Preliminary evidence suggests that this could be the case. Below we plot the share of clean innovation in total innovation (as measured by global patent data from PATSTAT). We find that many developing countries have a relatively high shares of clean innovation which could be indicative of a comparative advantage in clean technologies. We find a similar result within the UK where more backward regions then tend to more clean innovation intensive.
+This raises the question if developing countries are particularly well placed to develop an industrial strategy around clean technologies. Preliminary evidence suggests that this could be the case. In Figure \@ref(fig:globe) (below) we plot the share of clean innovation in total innovation (as measured by global patent data from PATSTAT). We find that many developing countries have a relatively high shares of clean innovation which could be indicative of a comparative advantage in clean technologies. We find a similar result within the UK (In Figure  \@ref(fig:inni) below) where more backward  regions (with overall low levels of innovation) then tend to more clean innovation intensive. Note that is not merely a "new technology" effect. By contrast COVID related technologies (Microbiology fields related to COVID research as well as technologies that help with the effects of a pandemic such as IT for remote working for instance) are more concentrated in areas of the country that are  more innovation intensive already.
 
-Could this be a coincidence or are there deeper structural reasons? The activity in peripheral regions is likely to be more dominated by recent market entrants. Entrants will have strong incentives to focus on new technologies if incumbents benefit from knowledge advantage in existing technologies and existing knowledge is not complementary with knowledge related to new technologies. Technologies might also vary in their level of entry costs. In this context it is instructive to see that COVID related technologies seem to be rather less associated with more backward regions withing the UK.
+Could this be a coincidence or are there deeper structural reasons? Factors such as the market structure in clean vs dirty technologies, the degree of complementarity of knowledge capital for clean and dirty technologies as well as specific geographic factors (e.g. availability of renewable resources) could be responsible.^[Related to this see [Acemoglu et al.](https://www.aeaweb.org/articles?id=10.1257/aer.102.1.131), [Aghion et al.](https://www.journals.uchicago.edu/doi/abs/10.1086/684581) and [Benabou et al.](https://www.nber.org/papers/w26921)]
+Moreover, there is plenty of evidence that the emergence of new technological waves provides opportunities for dramatic growth; ; e.g. the microelectronics in the case of Japan, Wireless and Networking Technologies in the case of Korea and China, web based business services and software in the case of certain parts of India etc. 
 
-Historically, some of the most spectacular growth stories were closely related to the emergence of new technological waves; e.g. the microelectronics in the case of Japan, Wireless and Networking Technologies in the case of Korea and China, web based business services and software in the case of India etc. 
+All of this calls for a research program into if and how developing countries might be able to successfully ride the clean technology wave; not only or primarily as willing adopters of cutting edge technologies developed elsewhere but as leaders of the field.
 
-All of this calls for a research programme into if and how developing countries might be able to successfully ride the clean technology wave; not only or primarily as willing adopters of cutting edge technologies developed elsewhere but as leaders of the field.
-
-This will include theoretical into which characteristics of clean technologies might be particular suited in a developing country context. It will inclue
-
-This will include empirical work to measure and 
+This will include 
+- Theoretical work into technology characteristics relevant for rapid development. 
+- Empirical work to apply such theoretical frameworks to specific technologies and countries
+- The development of indicators and tools that can guide policy
+- Detailed design of specific policies and policy frameworks (The role of development banks, IP protection, Digital Platforms, Infrastructure such as broadband or electricity grid integration).
 
 
 
@@ -48,9 +55,30 @@ library(dplyr)
 library(readr)
 library(lubridate)
 
-
+library(readr)
 nuts3dat=read.csv("nuts3dat.csv")
+
+
+#xlook=read_csv("https://www.dropbox.com/s/fidc1sr298imhku/LAU2_to_LAU1_to_NUTS3_to_NUTS2_to_NUTS1__December_2018__Lookup_in_United_Kingdom.csv?dl=1")
+#xlook=xlook %>% select(NUTS318CD,NUTS118NM,NUTS318NM,NUTS218CD,NUTS218NM,NUTS118CD,NUTS118NM) %>% distinct(NUTS318CD, .keep_all = T)
+xlook=nuts3dat %>% select(geo_code,nuts2) %>% distinct(geo_code,.keep_all = T)
+                                                       
+
+nutslook=read_csv("https://www.dropbox.com/s/4piv1p53hhloo5l/NUTS_Level_2_%28January_2015%29_Names_and_Codes_in_the_United_Kingdom.csv?dl=1")
+
+nuts2=nuts3dat %>% 
+      select(innos,nuts2,geo_code,covidinnos,cleaninnos, covidinnos_shares)%>%
+                   distinct(geo_code,.keep_all=TRUE)
+
+nuts2=nuts2 %>% mutate(cleanOinnos=cleaninnos/innos*100, covidOinnos=covidinnos/innos*100,innos_sh=innos/sum(innos,na.rm = TRUE)*100)
+
+#nuts2=nuts2 %>% left_join(nutslook,by=c("nuts2"="NUTS215CD")) 
+
+#nuts2=nuts2 %>% left_join(xlook,by=c("geo_code"="NUTS318CD")) 
 rta=read.csv("rta.csv")
+
+
+
 
 
 ```
@@ -170,153 +198,78 @@ p <- plot_geo(df) %>%
 ```
 
 
-```{r globe,  fig.cap="Share of clean in total innovation",echo=FALSE,message=FALSE}
+```{r,include=FALSE}
+library(knitr)
+knit_hooks$set(customcap= function(before, options, envir) {
+  if(!before) {
+    paste('<p class="caption"> (\\#fig:globe)',options$customcap,"</p>",sep="")
+    }
+    })
+```
+ 
+
+```{r globe,  customcap="Share of clean in total innovation (in %)",echo=FALSE}
 
 div(p)
-#print(p)
 
 ```
 
 
-```{r Map command, include=FALSE,message=FALSE,echo=FALSE}
-library("RSQLite")
-library("sqldf")
-library(haven)
-library(plyr)
-library(doBy)
+<br>
+<br>
+
+```{r newmap,include=FALSE}
+
+
+#Clear the memory
+#rm(list=ls())
+#Download some important packages
 library(maps)
+library(mapdata)
 library(maptools)
 library(rgdal)
+library(ggmap)
+library(ggplot2)
+library(rgeos)
+library(broom)
+library(plyr)
+
+#install.packages('rgeos', type='source')
+#install.packages('rgdal', type='source')
 
 
-NUTS3 <- readOGR(dsn =path.expand("../../Clean Growth Report 2017/code/R example/R example"), layer = "nuts3_withid")
+#Load the shapefile - make sure you change the filepath to where you saved the shapefiles
+#shapefile <- readOGR(dsn="NUTS_Level_2__January_2015__Boundaries-shp", layer="NUTS_Level_2__January_2015__Boundaries")
+shapefile <- readOGR(dsn="../../Clean Growth Report 2017/code/R example/R example", layer = "nuts3_withid")
 
 
-nuts2_map<-function(vvv,lll,geoid,fstring="%2.0f"){
-
-
-
-# Reading in NUTS3 shapefile (in UK grid format)
-  #C:\Users\Ralf Martin\Dropbox\Clean Growth Report 2017\code\R example\R example
-getwd()  
-
-
-
-
-
-
-# Joining shapefile and data
-
-index <- match(NUTS3$NUTS_ID, geoid)
-#length(index)
-#NUTS3$NUTS_ID[is.na(index)]
-#NUTS3$X2015 = NUTS3$ev_GB00t14
-
-
-#NUTS3$X2015 <- productivityUK[index, "X2015"]
-
-
-#summary(vvv)
-deciles=quantile(vvv, prob = c(0.1, 0.2, 0.3,0.4,0.5,0.6,0.7,0.8,0.9),na.rm=TRUE)
-#print(deciles)
-#length(NUTS3$NUTS_ID)
-NUTS3$X2015 <- vvv[index]
-
-
-# Defining colour options as a function
-
-library(RColorBrewer)
-clist=brewer.pal(10, 'PRGn')
-
-#clist=c("#053061","#2166ac","#4393c3","#92c5de","#d1e5f0","#fddbc7","#f4a582","#d6604d","#b2182b","#67001f")
+mapdata <- tidy(shapefile, region="NUTS_ID") #This might take a few minutes
 
 
 
-color_prod <- function(x,dec) {
+df <- mapdata %>% inner_join( xlook, by=c("id"="geo_code"))
+df <- df %>% left_join( nuts2, by=c("nuts2"="nuts2"))
 
+
+
+nuts2mapper=function(df,value,label){
+  #Create the heatmap using the ggplot2 package
   
+  df['value']=df[value]
   
-  if (is.na(x)) {
-    col <- "#ffffff"
-  }
-  else if (x > dec[9]) {
-    col <- clist[10]
-  }
-  else if (x > dec[8]) {
-    col <- clist[9]
-  }
-  else if (x > dec[7]) {
-    col <- clist[8]
-  }
-  else if (x > dec[6]) {
-    col <- clist[7]
-  }
-  else if (x > dec[5]) {
-    col <- clist[6]
-  }
-  else if (x > dec[4]) {
-    col <- clist[5]
-  }
-  else if (x > dec[3]) {
-    col <- clist[4]
-  }
-  else if (x > dec[2]) {
-    col <- clist[3]
-  }
-  else if (x > dec[1]) {
-    col <- clist[2]
-  }
-  else {
-    col <- clist[1]
-  }
-  return(col)
+  gg <- ggplot() + geom_polygon(data = df, aes(x = long, y = lat, group = group, fill = value), color = NA, size = 0.1)
+  gg <- gg + scale_fill_gradient2(low = "black", mid = "blue", high = "green", na.value = "white") + labs(fill = label)
+  gg <- gg + coord_fixed(1)
+  gg <- gg + theme_minimal()
+  gg <- gg + theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank(), )
+  gg <- gg + theme(axis.title.x=element_blank(), axis.text.x = element_blank(), axis.ticks.x = element_blank())
+  gg <- gg + theme(axis.title.y=element_blank(), axis.text.y = element_blank(), axis.ticks.y = element_blank())
+  #print(gg)
+  return(gg)
 }
-
-# Applying colour options
-NUTS3$col <- sapply(NUTS3$X2015, color_prod,dec=deciles)
-NUTS3$col[!is.na(index)]
-# Dropping non-UK cells
-# only use cells that have data - this is how we drop all other NUTS regions
-UKnuts3<-subset(NUTS3, !is.na(X2015))
-#UKnuts3<-NUTS3
-
-##### 2015 Productivity Map, UK, formatted ##################################
-
-# Defining the map plot
-par(mar=c(0,0,0,0), bg="white")
-plot(0:1, 0:1, type="n", xlab="", ylab="", axes=FALSE, asp=1)
-
-# Adding cloropleth map
-par(new=TRUE, plt=c(0, 1, 0.075, 1))
-plot(UKnuts3, col=UKnuts3$col, border=NA)
-
-  # Defining legend
-  par(new=TRUE, plt=c(0, 0.9, .03, .23))
-  plot(0:1, 0:1, type="n", xlab="", ylab="", asp=1, axes=FALSE)
-  col <- clist
-  breaks <- sprintf(fstring,deciles*1)
-  breaks
-  rect_width <- 2.5 / length(col)
-
-  xleft <- 0:(length(col)-1) * rect_width
-  ybottom <- rep(.25, length(col))
-  xright <- 1:length(col) * rect_width
-  ytop <- rep(.35, length(col))
-
-  # Adding legend to map
-  rect(xleft, ybottom, xright, ytop, col=col, border="#e0e0e0", lwd=.5)
-  text(1:(length(col)-1) * rect_width, .2, labels = breaks, cex=0.5,srt=0)    
-  text(1:1 * rect_width*5, 0.05, labels = lll, cex=0.5,srt=0)    
-
-
-
-#>>>>>>>    
-}
-
-
-
 
 ```
+
 
 
 ```{r draw clean innos map,echo=FALSE, include=FALSE,echo=FALSE,message=FALSE}
@@ -325,32 +278,45 @@ plot(UKnuts3, col=UKnuts3$col, border=NA)
 #gl_clean=filter(globalshares,Category=="Grey+Clean")$inno_sh 
 #gl_covid= 
 
-nuts3dat=nuts3dat %>% mutate(cleanOinnos=(cleaninnos_shares/innos_shares-1)*100,covidOinnos=(covidinnos_shares/innos_shares-1)*100 )
+#nuts3dat=nuts3dat %>% mutate(cleanOinnos=(cleaninnos_shares/innos_shares-1)*100,covidOinnos=(covidinnos_shares/innos_shares-1)*100 )
+
+
+p1=nuts2mapper(df,value="cleanOinnos",label="% within area")+ theme(legend.key.size = unit(0.4, "cm"))
+p2=nuts2mapper(df,value="covidOinnos",label="% within area")+ theme(legend.key.size = unit(0.4, "cm"))
+p3=nuts2mapper(df,value="innos_sh",label="% of UK")+ theme(legend.key.size = unit(0.4, "cm"))
+
+#p1=nuts2_map(nuts3dat$cleanOinnos,  "%",nuts3dat$nuts3,fstring="%2.2f")
+#p2=nuts2_map(nuts3dat$covidOinnos,  "%",nuts3dat$nuts3,fstring="%2.2f")
+#p3=nuts2_map(nuts3dat$innos_shares, "%",nuts3dat$nuts3,fstring="%2.2f")
+library(cowplot)
+library(ggplot2)
 
 
 
 ```
 
-
-
-```{r cleani,  fig.cap="Share of clean in total innovation", echo=FALSE, message=FALSE}
-nuts2_map(nuts3dat$cleanOinnos,"%",nuts3dat$nuts3,fstring="%2.2f")
-
-
-
-```
-
-```{r covi,  fig.cap="Share of COVID & COVID related in total innovation", echo=FALSE,message=FALSE}
-nuts2_map(nuts3dat$covidOinnos,"%",nuts3dat$nuts3,fstring="%2.2f")
-
-```
 
 ```{r scatti,  fig.cap="Share of COVID & COVID related in total innovation", echo=FALSE,message=FALSE}
 library(ggplot2)
-ggplot(nuts3dat, aes(x=innos_shares))+geom_point(aes(y=covidOinnos,color="RTA Covid"))+
-   geom_point(aes(y=cleanOinnos,color="RTA Clean+Grey")) +theme_minimal()+
-   geom_smooth(method = "lm", se = T,aes(y=covidOinnos,color="RTA Covid")) +
-   geom_smooth(method = "lm", se = T,aes(y=cleanOinnos,color="RTA Clean+Grey"))+ylab("RTA")+xlab("Share of UK innovation")
+p4=ggplot(nuts2, aes(x=innos_sh))+geom_point(aes(y=covidOinnos,color="Share Covid"))+
+   geom_point(aes(y=cleanOinnos,color="Share Clean")) +theme_minimal()+
+   geom_smooth(method = "lm", se = T,aes(y=covidOinnos,color="Share Covid")) +  labs(color = "") +
+   geom_smooth(method = "lm", se = T,aes(y=cleanOinnos,color="Share Clean"))+ylab("%")+xlab("Share of UK innovation in %")+
+   theme(legend.key.size = unit(0.4, "cm"))
 
 ```
 
+
+
+```{r inni, fig.cap="Clean and COVID related innovation in the UK",echo=FALSE}
+plot_grid(p1, p2, p3,p4,labels=c("Cleantech Share","COVID related Share ", "Distribution of Innovation"),
+          label_size=10,nrow=2,ncol=2,rel_widths = c(1,1,1,1),rel_heights=c(1,1,1,1))
+```
+
+
+```{r}
+
+
+
+
+```
