--- a/research.Rmd
+++ b/research.Rmd
@@ -15,7 +15,7 @@ output:
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
-library("webex")
+#library("webex")
 ```
 
 ```{r,evel=FALSE,message=FALSE}
