--- a/_posts/ethvlog/ethvlog.Rmd
+++ b/_posts/ethvlog/ethvlog.Rmd
@@ -7,6 +7,7 @@ author:
   - name: Ralf Martin
 date: "`r Sys.Date()`"
 output: distill::distill_article
+preview: sshot.png
 ---
 
 ```{r setup, include=FALSE}
