--- a/_posts/powbaltata/powbaltata.Rmd
+++ b/_posts/powbaltata/powbaltata.Rmd
@@ -28,7 +28,7 @@ Further, we examine what would happen if we used this tool to strategically swit
 
 We also examine the emission reduction scale if a scheme like this would be rolled out among all smart meter customers of TATA in Mumbai and Delhi: over a 5 year period this could save us much as 85 thousand tons of CO2; i.e. approximately the equivalent of 85K transatlantic flights per passenger.
 
-Further details in our joint briefing with [Tata Power](https://www.imperial.ac.uk/news/256213/towards-net-zero-imperial-collaborates-with/)
+Further details in our [joint briefing with Tata Power](https://www.imperial.ac.uk/news/256213/towards-net-zero-imperial-collaborates-with/)
 
 
 
